# brainfuck-jit

./: Cargo.toml  README.md
data/: random.bf
src/: bf_inter.rs  bf_ir.rs  bf_jit.rs  ir.rs  opcode.rs
